<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/myblack"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/btngrey"
        android:textSize="20sp"
        android:textAlignment="viewEnd"
        android:hint="@string/expression"
        android:textColorHint="@color/btngrey"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/edtext_main"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:maxLines="2"
        android:maxLength="13"
        android:gravity="top"
        android:textAlignment="textEnd"
        android:textColorHint="@color/white"
        android:textSize="40sp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:inputType="number|numberDecimal"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:weightSum="6"
        android:orientation="vertical"
        android:background="@color/myblack"
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="2dp"
            >
            <Button
                android:id="@+id/btncos"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/e"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:background="@drawable/button_bg_firstline"
                />
            <Button
                android:id="@+id/btnpi"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/pibtn"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:background="@drawable/button_bg_firstline"
                />
            <Button
                android:id="@+id/btnsin"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/btnsin"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg_firstline"
                />
            <Button
                android:id="@+id/btnback"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:gravity="center"
                android:paddingStart="30dp"
                android:backgroundTint="@color/myred"
                android:drawableStart="@drawable/ic_baseline_backspace"
                android:background="@drawable/button_bg_firstline"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:weightSum="4"
            >

            <Button
                android:id="@+id/btnClear"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="c"
                android:textAlignment="center"
                android:textColor="@color/btngred"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:background="@drawable/btnredcolr"

                />
            <Button
                android:id="@+id/btnbrackopen"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/brackopen"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnbrackClose"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/brackClose"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnDivide"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/backSlash"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/btnyello"
                />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="2dp"
            >
            <Button
                android:id="@+id/btnseven"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnseven"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnEight"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btneight"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnnine"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnNine"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnmultiply"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnMultipy"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/btnyello"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="2dp"
            >
            <Button
                android:id="@+id/btnfour"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnFour"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnFive"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnFive"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnsix"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnSix"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnminus"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnMinus"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/btnyello"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="2dp"
            >
            <Button
                android:id="@+id/btnone"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnone"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btntwo"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/btntwo"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnthree"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnthree"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnplus"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnplus"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/btnyello"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:layout_margin="2dp"

            >
            <Button
                android:id="@+id/btnzero"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:text="0"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btndot"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btndot"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/button_bg_secondline"
                />
            <Button
                android:id="@+id/btnequal"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/btnequal"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:background="@drawable/btngreen"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>